@@ -5,6 +5,7 @@ Changelog for JErgometer
 
 2012-03-11
 * [stefan]  * fixed bug #274: get rid of the error message "ResourceManager : unable to find resource 'org/jergometer/gui/templates/default_de.vm' in any resource loader."
+            * fixed bug #275: exception when opening settings dialog
 
 2012-03-10
 * [stefan]  * implemented issue #273: provide alternative to buggy RXTX library (socat)
